[gd_scene load_steps=69 format=2]

[ext_resource path="res://Actors/the_acolyte.png" type="Texture" id=1]
[ext_resource path="res://Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Actors/preacher.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Woosh by Moogy73.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Punch by newagesoup.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Drag by samantha-dolman.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/OnHit by vmgraw.ogg" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.60123
height = 0.119843

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.32433
height = 17.2087

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 288, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 288, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 320, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 320, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 224, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 240, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 272, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=60]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "transform",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_west",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 15 ) ],
"loop": true,
"name": "recover_south",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk_north",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk_south",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "priest",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "idle_east",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 24 ) ],
"loop": true,
"name": "recover_west",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "drag_north",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "attack_north",
"speed": 8.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "attack_west",
"speed": 8.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "attack_east",
"speed": 8.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 41 ) ],
"loop": true,
"name": "recover_east",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "drag_south",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "drag_west",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "drag_east",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "idle_north",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "idle_south",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ) ],
"loop": true,
"name": "idle_west",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "walk_east",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 55 ) ],
"loop": true,
"name": "recover_north",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": false,
"name": "attack_south",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=61]
radius = 6.73773

[node name="Player" type="KinematicBody2D"]
collision_layer = 3073
collision_mask = 2081
script = ExtResource( 2 )
max_health = 2
speed = 110
drag_speed = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11.359 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, 2.56312 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 60 )
animation = "transform"
frame = 7
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")

[node name="AttackAreas" type="Node2D" parent="."]

[node name="East" type="Area2D" parent="AttackAreas"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/East"]
position = Vector2( 12.1918, 1.1936 )
shape = SubResource( 61 )

[node name="West" type="Area2D" parent="AttackAreas"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/West"]
position = Vector2( -12.192, 1.194 )
shape = SubResource( 61 )

[node name="North" type="Area2D" parent="AttackAreas"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/North"]
position = Vector2( 0, -12.532 )
shape = SubResource( 61 )

[node name="South" type="Area2D" parent="AttackAreas"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/South"]
position = Vector2( 0, 13.9831 )
shape = SubResource( 61 )

[node name="DragTarget" type="Node2D" parent="."]

[node name="south" type="Node2D" parent="DragTarget"]
position = Vector2( -0.063, -15 )

[node name="west" type="Node2D" parent="DragTarget"]
position = Vector2( 10.5163, 10.0979 )

[node name="east" type="Node2D" parent="DragTarget"]
position = Vector2( -10.5791, 10.0978 )

[node name="north" type="Node2D" parent="DragTarget"]
position = Vector2( 0.0626717, 18.4194 )

[node name="Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -9.578

[node name="Drag" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -13.0

[node name="OnHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
